--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,7 +25,7 @@
         <h2>Current subscription - {{ name }}</h2>
         {% endif %}
         {% if number_purchases == 0 %}
-        <h2>You aren't currently subscribed - click below to start</h2>
+        <h2>You aren't currently subscribed - click below to shop</h2>
         {% endif %}
         <a href="/coffees/" class="btn btn-primary topup-btn">Top up your coffees</a>
 
